# i2rsCode

./: Makefile.am  SERVICES  configure.ac
i2rs/: Makefile  i2rs_main.c  i2rs_vty.c  i2rs_zebra.c  i2rs_zebra.h  i2rsd
lib/: command.h
myquagga/: README.txt  configure.ac
myquagga/bgpd/.libs/: bgp_btoa  bgpd
myquagga/debian/: changelog  control  quagga.install
myquagga/doc/: quagga.aux  quagga.cp  quagga.cps  quagga.fn  quagga.ky  quagga.toc
myquagga/i2rs/: Makefile.am  Makefile.in  i2rs_main.c  i2rs_vty.h  i2rs_zebra.c  i2rs_zebra.h  i2rsd.h
myquagga/i2rs/.libs/: i2rsd
myquagga/isisd/.libs/: isisd
myquagga/lib/: command.h  zclient.c
myquagga/lib/.libs/: libzebra.lai  libzebra.so.0.0.0
myquagga/ospf6d/.libs/: ospf6d
myquagga/ospfclient/.libs/: libospfapiclient.lai  libospfapiclient.so.0.0.0  libospfapiclient.so.0.0.0T  ospfclient
myquagga/ospfd/.libs/: libospf.lai  libospf.so.0.0.0  libospf.so.0.0.0T  ospfd
myquagga/pimd/.libs/: pimd
myquagga/ripd/: Makefile.am  README.txt  rip_interface.c  rip_main.c  rip_zebra.c  ripd.c  ripd.h
myquagga/ripd/.libs/: ripd
myquagga/ripngd/.libs/: ripngd
myquagga/tests/: bgpd.xml  libzebra.xml  test-commands-defun.c
myquagga/tests/.libs/: aspathtest  ecommtest  heavy  heavythread  heavywq  lt-aspathtest  lt-ecommtest  lt-tabletest  lt-test-timer-correctness  lt-testbgpcap  lt-testbgpmpath  lt-testbgpmpattr  lt-testcli  tabletest  test-timer-correctness  test-timer-performance  testbgpcap  testbgpmpath  testbgpmpattr  testcli  (+9 more)
myquagga/vtysh/: vtysh.c
pkgsrc/: Makefile  Makefile.am  Makefile.in  i2rs.sh
(+4 files in other folders)
